--- a/app/assets/styles/modules/_site-header.css
+++ b/app/assets/styles/modules/_site-header.css
@@ -32,7 +32,7 @@
         transform: translateX(-50%) scale(.8);
         transform-origin: 50% 0;
         background-color: $mainBlue;
-        padding: 25px 36px;
+        padding: 10px;
 
         @mixin atMedium {
             left: auto;
