--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -15,5 +15,7 @@
 @import 'modules/_site-header';
 @import 'modules/_primary-nav';
 @import 'modules/_modal';
+@import 'modules/_view-single-item';
+@import 'modules/_form';
 
 
