--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -13,6 +13,12 @@
         padding: 1.1rem 1.9rem;
     }
 
+    &--submit-box {
+        border: 1px solid transparent;
+        padding: .75rem 1.2rem;
+        display: inline-block;
+    }
+
     @mixin atSmall {
         font-size: 1.25rem;
     }
